@@ -90,6 +90,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - FO (abas-ERP)          Tan-Vinh Nguyen
 - Fortran                Cedric Arrabie
 - GADV 4CS               Jason Curl
+- GAMBAS                 Jesus Guardon
 - glSlang                Benny Baumann
 - Gettext                Milian Wolff
 - GNU make               Neil Bird
